subiendo los cambios refactorizacion